--- a/Zhanggy.Note.DesignMode/Zhanggy.Note.DesignMode.csproj
+++ b/Zhanggy.Note.DesignMode/Zhanggy.Note.DesignMode.csproj
@@ -41,9 +41,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Singleton\Singleton.cs" />
     <Compile Include="Strategy\Duck.cs" />
     <Compile Include="Strategy\FlyBehavior.cs" />
     <Compile Include="Strategy\QucakBehavior.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
