浅复制和深复制

--- a/Zhanggy.Note.Test/Zhanggy.Note.Test.csproj
+++ b/Zhanggy.Note.Test/Zhanggy.Note.Test.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="ArithmeticProgression.cs" />
     <Compile Include="Bubbling.cs" />
+    <Compile Include="DeepCopy.cs" />
     <Compile Include="FibonacciSequence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test.cs" />
