--- a/Zhanggy.Note/Zhanggy.Note.csproj
+++ b/Zhanggy.Note/Zhanggy.Note.csproj
@@ -113,6 +113,7 @@
   <ItemGroup>
     <Content Include="favicon.ico" />
     <Content Include="FindControl.aspx" />
+    <Content Include="Js\Common.js" />
     <Content Include="Test.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
